# esm-mlx

./: .gitignore  MANIFEST.in  PORT_PLAN.md  README_MLX.md  analyze_pytorch_esm.py  benchmark_results.json  benchmark_suite.py  debug_attention.py  debug_layernorm.py  debug_mlx_performance.py  debug_model_diff.py  debug_pytorch_backend.py  esmfold_mlx_benchmark_results.json  inspect_pytorch_attention.py  inspect_pytorch_transformer.py  optimized_benchmark.py  pyproject.toml  requirements.txt  setup_mlx.py  test_installation.py  test_numerical_accuracy.py  weight_converter.py
esm/: pretrained.py
esm/model/: esm2.py
esm_mlx/: __init__.py  api.py  cli.py  confidence_head.py  config.py  convert_weights.py  esm2_mlx.py  esmfold_mlx.py  ipa.py  quantization.py  simple_triangular.py  structure_head.py  triangular_attention.py  weight_loader.py
examples/: basic_usage.py
tests/mlx/: test_api.py  test_attention_direct.py  test_component_by_component.py  test_conversion.py  test_esm2_mlx.py  test_exact_pytorch_match.py  test_full_model_performance.py  test_numerical_accuracy.py  test_quantization.py  test_real_weights.py  test_structure_prediction.py
